# hint

./: .boring  .travis.yml  AUTHORS  CHANGELOG.markdown  CHANGELOG.md  Changes  README  README.md  Setup.lhs  hint.cabal
examples/: example.hs  example1.hs
generate/: mk_extensions_mod.hs
src/: example.hs  t.hs
src/Control/Monad/: Ghc.hs
src/Hint/: Annotations.hs  Base.hs  Compat.hs  CompatPlatform.hs  Configuration.hs  Context.hs  Conversions.hs  Eval.hs  Extension.hs  GHC.hs  InterpreterT.hs  Parsers.hs  Reflection.hs  Sandbox.hs  SignalHandlers.hs  Typecheck.hs  Typecheck.hs-boot  Util.hs
src/Hint/Compat/: Exceptions.hs
src/Hint/GHC/: Base.hs  Compat.hs  Configuration.hs  Context.hs  Conversions.hs  Eval.hs  Parsers.hs  Reflection.hs  Typecheck.hs
src/Language/Haskell/: Interpreter.hs
src/Language/Haskell/Interpreter/: GHC.hs  Unsafe.hs
src/Language/Haskell/Interpreter/GHC/: Base.hs  Compat.hs  Conversions.hs  Parsers.hs  Unsafe.hs
unit-tests/: clean.sh  make-unit-tests.sh  run-unit-tests.hs
util/: mk_extensions_mod.hs
