name:                hint
version:             0.2
description:
	This library defines an @Interpreter@ monad, inside which modules can be
        loaded and browsed; and strings with Haskell expressions can be
        evaluated, coerced into values or type-checked. The library is
        thread-safe and all operations (even the coertion of expressions to
        values) are type-safe.
	It is, esentially, a huge subset of the GHC API wrapped in a simpler
	API. Works with GHC 6.6.x and 6.8.x.
synopsis:            Runtime Haskell interpreter (GHC API wrapper)
category:            Language, Compilers/Interpreters
license:             BSD3
license-file:        LICENSE
author:              Daniel Gorin
maintainer:          jcpetruzza@gmail.com

cabal-version:       >= 1.2
tested-with:         GHC==6.6.1, GHC==6.8.2


build-depends:       base, haskell-src, ghc, mtl

exposed-modules:     Language.Haskell.Interpreter.GHC
other-modules:       Language.Haskell.Interpreter.GHC.Base
                     Language.Haskell.Interpreter.GHC.Compat
		     Language.Haskell.Interpreter.GHC.Conversions
                     Language.Haskell.Interpreter.GHC.Parsers
                     Language.Haskell.Interpreter.GHC.LibDir

hs-source-dirs:      src
extra-source-files:  README
		     Changes
		     examples/example.hs
		     examples/SomeModule.hs

ghc-options:         -Wall -O2
extensions:          CPP
	             GeneralizedNewtypeDeriving
	    	     MultiParamTypeClasses
	    	     DeriveDataTypeable
		     MagicHash
		     TypeSynonymInstances
		     FlexibleInstances
