name:                hint
version:             0.2.3
description:
        This library defines an @Interpreter@ monad. It allows to load Haskell
        modules, browse them, type-check and evaluate strings with Haskell
        expressions and even coerce them into values. The library is
        thread-safe and type-safe (even the coercion of expressions to
        values).

        It is, esentially, a huge subset of the GHC API wrapped in a simpler
        API. Works with GHC 6.6.x and 6.8.x.
synopsis:           Runtime Haskell interpreter (GHC API wrapper)
category:           Language, Compilers/Interpreters
license:            BSD3
license-file:       LICENSE
author:             Daniel Gorin
maintainer:         jcpetruzza@gmail.com

cabal-version:      >= 1.2 && < 1.5
build-type:         Simple
tested-with:        GHC==6.6.1, GHC==6.8.2


build-depends:      base, haskell-src, ghc, mtl, ghc-paths

exposed-modules:    Language.Haskell.Interpreter.GHC
                    Language.Haskell.Interpreter.GHC.Unsafe
other-modules:      Language.Haskell.Interpreter.GHC.Base
                    Language.Haskell.Interpreter.GHC.Compat
                    Language.Haskell.Interpreter.GHC.Conversions
                    Language.Haskell.Interpreter.GHC.Parsers

hs-source-dirs:     src
extra-source-files: README
                    AUTHORS
                    Changes
                    examples/example.hs
                    examples/SomeModule.hs
                    unit-tests/run-unit-tests.hs

ghc-options:        -Wall -O2
extensions:         CPP
                    GeneralizedNewtypeDeriving
                    MultiParamTypeClasses
                    DeriveDataTypeable
                    MagicHash
                    TypeSynonymInstances
                    FlexibleInstances
